[tool.poetry]
name = "miraie-ac"
version = "1.0.2"
description = "MirAIe-AC API for Python"
authors = ["Raj Kishore <40551183+rkzofficial@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiomqtt = "^2.0.1"
aiohttp = "^3.9.5"
asyncio = "^3.4.3"
certifi = "^2024.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
