[tool.poetry]
name = "miraie-ac"
version = "1.1.0"
description = "MirAIe-AC API for Python"
authors = ["Raj Kishore <40551183+rkzofficial@users.noreply.github.com>", "Ali Jafri <deCodeIt@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
aiomqtt = "^2.0.1"
aiohttp= "*"
asyncio = "^3.4.3"
certifi = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
